# EdgeCollaborativeMining

./: CMakeLists.txt  output12_0.txt  output12_0_1.txt  output12_0_2.txt  output12_0_3.txt  output12_0_4.txt  output12_0_5.txt  output12_0_6_1.txt  output12_0_6_10.txt  output12_0_6_2.txt  output12_0_6_3.txt  output12_0_6_4.txt  output12_0_6_5.txt  output12_0_6_6.txt  output12_0_6_7.txt  output12_0_6_8.txt  output12_0_6_9.txt  output12_0_7_1.txt  output12_1.txt  outputnozk3helpers.txt  outputnozk4helpers.txt  outputnozk5helpers.txt  outputzk1helpers.txt  outputzk2helpers.txt  outputzk3helpers.txt  outputzk4helpers.txt  script.sh  script_zk.sh
output/: output4h3d.txt
src/: Block.cpp  Block.h  CMakeLists.txt  Controller.cpp  Controller.h  ControllerNetworkUtilities.hpp  Helper.cpp  Helper.h  main.cpp
